project(goma)
message(STATUS "Adding Goma files to Make")

set(TARGETDIR bin)

set(TRILINOS_PREFIX ${TRILINOS_TOP}/lib/cmake/Trilinos)

set(CMAKE_PREFIX_PATH ${TRILINOS_PREFIX} ${CMAKE_PREFIX_PATH})
find_package(Trilinos REQUIRED)



message("\nFound Trilinos!  Here are the details: ")
message("   Trilinos_DIR = ${Trilinos_DIR}")
message("   Trilinos_VERSION = ${Trilinos_VERSION}")
message("End of Trilinos details\n")
message("Switching to Trilinos mode!\n")


set(CMAKE_CXX_COMPILER ${Trilinos_CXX_COMPILER} )
set(CMAKE_C_COMPILER ${Trilinos_C_COMPILER} )
set(CMAKE_Fortran_COMPILER ${Trilinos_Fortran_COMPILER} )




set(LD_FLAGS "-O ${Trilinos_EXTRA_LD_FLAGS}")

#${Trilinos_TPL_LIBRARIES}
set(TRILINOS_LIB_COMPLETELIST "${Trilinos_LIBRARY_DIRS} ${Trilinos_LIBRARIES}")
set(STARTING_LIBS "${SPARSE_LIB} ${TRILINOS_LIB_COMPLETELIST} ${ARPACK_LIB}")



#These are NOT libraries but rather compiler commands
#They are called libs to keep consistancy with the original makefile
set(ENDING_LIBS "${FORTRAN_LIB} ${SYS_LIB}")


#Suppress warnings because Goma isn't responsible for (most of) the spagetti code in trilinos and I don't want people thinking otherwise
#set(CMAKE_CXX_FLAGS  "${Trilinos_CXX_COMPILER_FLAGS} ${CMAKE_CXX_FLAGS} ${STARTING_LIBS} ${ENDING_LIBS} ${Trilinos_EXTRA_LD_FLAGS} -w")

set(CMAKE_CXX_FLAGS   "${Trilinos_CXX_COMPILER_FLAGS} ${CMAKE_CXX_FLAGS} ${USER_FLAGS} ${USER_CXX_FLAGS}")
set(CMAKE_C_FLAGS  "${Trilinos_C_COMPILER_FLAGS} ${CMAKE_C_FLAGS} ${USER_FLAGS} ${USER_C_FLAGS}")
set(CMAKE_Fortran_FLAGS  "${Trilinos_Fortran_COMPILER_FLAGS} ${CMAKE_Fortran_FLAGS} ${USER_FLAGS} ${USER_F_FLAGS}")
set(CMAKE_EXE_LINKER_FLAGS "${LD_FLAGS} ${USER_FLAGS} ${USER_LD_FLAGS}")




include_directories(${CMAKE_SOURCE_DIR}/include)
include_directories(${MPI_TOP}/include)
include_directories(${TRILINOS_TOP}/include)




#These defs are in the old makefile and used to make Goma properly compile
add_definitions(${USER_DEFINE})



get_source_files(SOURCE_FILES)



INCLUDE_DIRECTORIES(${Trilinos_INCLUDE_DIRS} ${Trilinos_TPL_INCLUDE_DIRS})




add_executable(${PROJECT_NAME} ${SOURCE_FILES})


TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${SPARSE_LIB} ${Trilinos_LIBRARIES} ${Trilinos_TPL_LIBRARIES} ${ARPACK_LIB} ${GOMA_MPI_LIB} ${Trilinos_EXTRA_LD_FLAGS} ${ENDING_LIBS})

set_project_info(${PROJECT_NAME} "${CMAKE_SOURCE_DIR}/${TARGETDIR}")



#Make install support in src (more in makelist above this)

file(WRITE importgomalibraries.sh "
#Autogenerated file to import the goma libraries.
export LD_LIBRARY_PATH=\"${MPI_TOP}/lib:$LD_LIBRARY_PATH\"
export PATH=\"${MPI_TOP}/bin:$PATH\"
export PATH=\"${TRILINOS_TOP}/bin:$PATH\"")



install (TARGETS "${CMAKE_SOURCE_DIR}/src/${PROJECT_NAME}" DESTINATION bin)



#make uninstall support avalible in the lists file above this one

